# memechan-sol

./: .env.sample  .gitignore  Anchor.toml  Cargo.toml  README.md  devkey.json  jest.config.js  package.json  tsconfig.json
data/: delta_m.csv  delta_m_2.csv  delta_m_3.csv
docs/: DEVELOPER_GUIDE.md  KNOWLEDGE_GRAPH.md  README.md  ROADMAP.md  TECHNICAL_SPEC.md  USER_GUIDE.md
keypairs/: admin.json  devnet-keypair.json  kp.json  openbook.json  raydium.json
programs/amm/: Cargo.toml
programs/memechan-sol/: Cargo.toml
programs/memechan-sol/src/: consts.rs  curve.rs  err.rs  fee_distribution.rs  fees.rs  init.rs  lib.rs  models.rs  staked_lp.rs  staking.rs  utils.rs  vesting.rs
programs/memechan-sol/src/endpoints/: add_fees.rs  bound_merge_tickets.rs  change_target_config.rs  close_ticket.rs  create_metadata.rs  get_swap_x_amt.rs  get_swap_y_amt.rs  go_live.rs  init_chan_amm_pool.rs  init_meme_amm_pool.rs  init_quote_amm_pool.rs  init_staking_pool.rs  mod.rs  new.rs  new_pool.rs  new_pool_meme_quote.rs  new_schedule.rs  new_target_config.rs  new_user_points.rs  new_user_stats_idempotent.rs  receive_points.rs  send_airdrop_funds.rs  staking_merge_tickets.rs  staking_merge_tickets_nz.rs  swap_x.rs  swap_y.rs  unstake.rs  withdraw_fees.rs
programs/memechan-sol/src/endpoints/admin/: change_points_epoch.rs  change_target_config.rs  fix_admin_ticket.rs  increase_vesting_time.rs  mod.rs  new_target_config.rs  recover_lp.rs  withdraw_admin_fees.rs  withdraw_admin_fees_presale.rs
programs/memechan-sol/src/endpoints/chanswap/: change_chan_price.rs  mod.rs  new_chan_swap.rs
programs/memechan-sol/src/libraries/: full_math.rs  mod.rs
programs/memechan-sol/src/math/: mod.rs  u192_decimal.rs  utils.rs
programs/memechan-sol/src/models/: bound.rs  chan_swap.rs  fee_distribution.rs  fees.rs  mod.rs  points_epoch.rs  presale_referral.rs  raydium.rs  staked_lp.rs  staking.rs  target_config.rs  ticket_schedule.rs  user_points.rs  user_stats.rs
programs/memechan-sol/src/raydium/: instruction.rs  mod.rs  models.rs
scripts/: recover-lp.ts
tests/: amm.ts  boundPool.ts  bound_pool.ts  chan_swap.ts  common.ts  config.ts  env.ts  helpers.ts  memechan-sol.test.ts  memechan-sol.ts  points_epoch.ts  pool.ts  staking.ts  target_config.ts  ticket.ts
tests/endpoints/: fees.ts  goLive.ts  go_live.ts  init.ts  initStakingPool.ts  new.ts  staking.ts  swapX.ts  swapY.ts  swap_x.ts  swap_y.ts  tickets.ts
tests/raydium/: config.ts  consts.ts  lookupTableCache.ts  openBookCreateMarket.ts  openbook.ts  raydium.ts  raydium_cp_swap.ts  utils.ts
tests/sol-sdk/: MemechanClient.ts  UserStats.ts
(+45 files in other folders)
