[package]
name = "memechan-sol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "memechan_sol"

[features]
default = ["localnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
localnet = []
devnet = []
mainnet = []

[dependencies]
num-integer = "0.1.46"
solana-program = "1.16.25"
anchor-lang = "0.29.0"
anchor-spl = {version = "0.29.0", features = ["metadata"]}
uint = "0.9.5"
# serum_dex = { git = "https://github.com/openbook-dex/program.git", features = ["no-entrypoint"] }
bytemuck = "*"
spl-math = "0.2.0"

[dev-dependencies]
csv = "1.1"
proptest = "1.0"

