[package]
name = "memechan-sol"
version = "0.2.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "memechan_sol"

[features]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
mainnet = []
testing = []
mainnet-testing = ["testing"]
localnet-testing = ["testing"]
default = ["mainnet"]

[dependencies]
num-integer = "0.1.46"
solana-program = "1.16.25"
anchor-lang = { version = "0.29.0" }
anchor-spl = { version = "0.29.0", features = ["metadata"] }
uint = "0.9.5"
bytemuck = "*"
spl-math = { version = "0.2.0", features = ["no-entrypoint"] }
dynamic-amm = { git = "https://github.com/memechan-gg/mercurial-dynamic-amm-sdk", features = ["cpi"] }
dynamic-vault = { git = "https://github.com/memechan-gg/mercurial-dynamic-amm-sdk", features = ["cpi"] }

[dev-dependencies]
csv = "1.1"
proptest = "1.0"

